# proxy-statements

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
proxy_statements/: parse.py  pyproject.toml  test.ipynb
proxy_statements/archive/: chroma.py  llama.py  parse.py  retreiver.py  test.py  test2.py  vectorize.py
proxy_statements/proxy_statements/: embed.py  question.py  retreive.py
statements/: Compensation Tracker for CSR Rotation v3 (No MAT and HAS).xlsx  Executive Compensation Write-Ups v5.docx
